--- a/Bar Management/App.config
+++ b/Bar Management/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="cnn" connectionString="server=.\\DONGSQLSERVER; database=QuanLyBarMot; trusted_connection=true; trustservercertificate=true; MultipleActiveResultSets=true" />
+    <add name="cnn" connectionString="server=.\\DONGSQLSERVER; database=QuanLyBarHai; trusted_connection=true; trustservercertificate=true; MultipleActiveResultSets=true" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
